--- a/react-app/src/components/Home.css
+++ b/react-app/src/components/Home.css
@@ -1,6 +1,6 @@
 body {
-    --twitter-color: #50b7f5;
-    --twitter-background: #e6ecf0;
+    --app-color: #50b7f5;
+    --app-background: #e6ecf0;
   }
   
   .app {
