--- a/react-app/src/components/Sidebar.css
+++ b/react-app/src/components/Sidebar.css
@@ -7,7 +7,10 @@
     padding-right: 20px;
 }
 
-
+a:visited {
+    text-decoration:none;
+    color: var(--app-color)
+}
 
 .critter-logo {
     color: var(--app-color);
