--- a/react-app/src/components/UsersCreets.css
+++ b/react-app/src/components/UsersCreets.css
@@ -1,52 +1,30 @@
-.creets-wrap {
+.profile-creets-wrap {
     border-top: 1px solid rgb(84, 84, 84);
     width: 500px;
 }
 
-.creets:hover {
+.profile-creets:hover {
     background-color: #2c3d4d;
     transition: all;
     transition-duration: 200ms;
 }
 
-.feed-creet-names-edit-and-content {
-    display: flex;
-    flex-direction: column;
-    justify-content: space-between;
-    margin-top: 15px;
-}
-
-.creets {
-    width: 500px;
-    display: grid;
-    grid-template-columns: 1fr 12fr;
-    border-bottom: 1px solid rgb(84, 84, 84);
-}
-
-.all-creets-everything-minus-pic {
-    width: 440px;
-    display: flex;
-    flex-direction: column;
-}
-
-.all-creets-profile-pic-link {
-    margin-top: 15px;
-    cursor: pointer;
-    height: 44px;
-}
-
-.all-creets-profile-pic:hover {
-    opacity: 0.7;
-}
-
-.all-creets-profile-pic {
+.profile_creets-pic {
     height: 44px;
     width: 44px;
     border-radius: 22px;
     margin-left: 15px;
 }
 
-.creet-link {
+.profile-creets {
+    width: 500px;
+    display: grid;
+    grid-template-columns: 1fr 12fr;
+    padding-top: 15px;
+    border-bottom: 1px solid rgb(84, 84, 84);
+}
+
+.profile_creet_link_edit_to_text_decoration_none {
     text-decoration: none;
     cursor: pointer;
 }
@@ -57,71 +35,43 @@
 }
 
 .timestamp {
+    color: gray;
+    margin-left: 12px;
+}
+
+.profile_creet-titles {
     display: flex;
     align-items: center;
-    color: gray;
-    font-size: 14px;
-    font-family: 'Lucida Sans Unicode';
     height: 30px;
 }
 
-.feed-creet-username-and-edit-btn {
+.profile_creet-username-edit-profile {
+    width: 430px;
     display: flex;
     justify-content: space-between;
     align-items: center;
-    width: 425px;
+    margin-left: 5px;
 }
 
-.feed-creet-display-name {
-    display: flex;
-    align-items: center;
+.profile-feed-creet-username {
     text-decoration: none;
     cursor: pointer;
     font-weight: bold;
     font-size: 14px;
-    padding-left: 10px;
     font-family: 'Lucida Sans Unicode';
-    height: 30px;
+    height: 100%;
+    width: 100%;
 }
 
-.stupid-dot {
-    margin-left: 12px;
-}
-
-.feed-creet-username {
-    display: flex;
-    align-items: center;
-    color: gray;
-    font-family: 'Lucida Sans Unicode';
-    font-size: 14px;
-    height: 30px;
-    padding-left: 8px;
-}
-
-.timestamp-container {
-    display: flex;
-    align-items: center;
-    justify-content: center;
-}
-
-.feed-creet-names {
-    display: flex;
-    flex-grow: 1;
-    justify-content: flex-end;
-    align-items: center;
-    height: 30px;
-}
-
-.feed-creet-icon-and-stat {
+.profile-feed-creet-icon-and-stat {
     display: flex;
     justify-content: center;
     align-items: center;
 }
 
-.feed-creet {
+#profile-feed-creet {
     text-decoration: none;
     cursor: pointer;
-    color: black;
     font-size: 14px;
     padding-left: 10px;
     font-family: 'Lucida Sans Unicode';
@@ -135,26 +85,27 @@
     word-wrap: break-word;
 }
 
-.feed-creet-content-lines {
-    width: 405px;
+.profile-feed-creet-content-lines {
     margin-top: 0px;
     margin-bottom: 0px;
+    width: 410px;
 }
 
-.feed-creet-stat {
+.profile-feed-creet-stat {
     margin-left: 5px;
 }
 
-.feed-creet-icons {
+.profile-feed-creet-icons {
     display: flex;
     justify-content: space-between;
     align-items: center;
     color: gray;
     margin-left: 15px;
     margin-right: 15px;
+    margin-bottom: 0%;
 }
 
-.feed-creet-img-container {
+.profile-feed-creet-img-container {
     width: 95%;
     display: flex;
     justify-content: center;
@@ -162,7 +113,7 @@
     margin-top: 10px;
 }
 
-.feed-creet-img {
+.profile-feed-creet-img {
     max-width: 95%;
     max-height: 500px;
     border-radius: 10px;
