--- a/react-app/src/components/Creets/Creets.css
+++ b/react-app/src/components/Creets/Creets.css
@@ -77,6 +77,7 @@
     align-items: center;
     text-decoration: none;
     cursor: pointer;
+    color: black;
     font-weight: bold;
     font-size: 14px;
     padding-left: 10px;
