--- a/react-app/src/components/Creets/EditCreets.css
+++ b/react-app/src/components/Creets/EditCreets.css
@@ -56,7 +56,7 @@
 }
 
 .edit-creet-close-btn-container:hover {
-    background-color: #27323d;
+    background-color: #dddddd;
     transition: all;
     transition-duration: 200ms;
 }
@@ -123,7 +123,7 @@
 
 .submit-edit-creet-btn {
     font-family: 'Lucida Sans Unicode';
-    background-color: #b83dba;
+    background-color: var(--app-color);
     border: none;
     color: white;
     font-weight: bold;
@@ -140,14 +140,14 @@
 }
 
 .submit-edit-creet-btn:hover {
-    background-color: #99349b;
+    background-color: #5cdeff;
     transition: all;
     transition-duration: 200ms;
 }
 
 .delete-creet-btn {
     font-family: 'Lucida Sans Unicode';
-    background-color: #b83dba;
+    background-color: red;
     border: none;
     color: white;
     font-weight: bold;
@@ -159,7 +159,7 @@
 }
 
 .delete-creet-btn:hover {
-    background-color: #99349b;
+    background-color: rgb(226, 0, 0);
     transition: all;
     transition-duration: 200ms;
 }
@@ -201,7 +201,7 @@
 }
 
 .edit-creet-img-icon {
-    color: #b83dba;
+    color: var(--app-color);
     cursor: pointer;
     width: 20px;
     height: 20px;
