--- a/react-app/src/components/UsersCreets.css
+++ b/react-app/src/components/UsersCreets.css
@@ -4,7 +4,7 @@
 }
 
 .profile-creets:hover {
-    background-color: #2c3d4d;
+    background-color: #fafafa;
     transition: all;
     transition-duration: 200ms;
 }
@@ -91,6 +91,7 @@
     margin-top: 0px;
     margin-bottom: 0px;
     width: 410px;
+    margin-left: 7px;
 }
 
 .profile-feed-creet-stat {
@@ -101,10 +102,10 @@
     display: flex;
     justify-content: space-between;
     align-items: center;
-    color: gray;
     margin-left: 15px;
     margin-right: 15px;
-    margin-bottom: 0%;
+    margin-top: 10px;
+    margin-bottom: 5px;
 }
 
 .profile-feed-creet-img-container {
