--- a/react-app/src/components/Creets/CreateCreet.css
+++ b/react-app/src/components/Creets/CreateCreet.css
@@ -48,6 +48,15 @@
     margin-top: -10px;
 }
 
+.add-creet-img-upload{
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    width: 40px;
+    height: 40px;
+    border-radius: 20px;
+}
+
 .creetBox__imageInput {
     display: none;
 }
