--- a/react-app/src/components/Comments/EditComment.css
+++ b/react-app/src/components/Comments/EditComment.css
@@ -1,4 +1,4 @@
-.edit-creet-wrap {
+.edit-comment-wrap {
     width: 600px;
     height: 520px;
     /* background-color: #15202b; */
@@ -7,30 +7,30 @@
     flex-direction: column;
 }
 
-.edit-creet-top-left {
+.edit-comment-top-left {
     display: flex;
     align-items: center;
     justify-content: flex-start;
 }
 
-.edit-creet-form {
+.edit-comment-form {
     display: flex;
     flex-direction: column;
     justify-content: space-between;
     height: 95%;
 }
 
-.edit-creet-top-right {
+.edit-comment-top-right {
     margin-right: 20px;
 }
 
-.edit-creet-btn-and-title {
+.edit-comment-btn-and-title {
     display: flex;
     align-items: center;
     justify-content: space-between;
 }
 
-.edit-creet-title {
+.edit-comment-title {
     margin-left: 10px;
     font-family: 'Lucida Sans Unicode';
     font-size: 25px;
@@ -42,12 +42,12 @@
     align-items: center;
 }
 
-.edit-creet-close-btn {
+.edit-comment-close-btn {
     height: 25px;
     width: 25px;
 }
 
-.edit-creet-close-btn-container {
+.edit-comment-close-btn-container {
     margin-left: 8px;
     display: flex;
     justify-content: center;
@@ -59,14 +59,14 @@
     color: rgb(134, 134, 134);
 }
 
-.edit-creet-close-btn-container:hover {
+.edit-comment-close-btn-container:hover {
     background-color: #dddddd;
     transition: all;
     color: red;
     transition-duration: 200ms;
 }
 
-.edit-creet-input {
+.edit-comment-input {
     display: flex;
     outline: none;
     font-size: 20px;
@@ -80,11 +80,11 @@
     font-family: 'Lucida Sans Unicode';
 }
 
-.edit-creet-input::-webkit-scrollbar {
+.edit-comment-input::-webkit-scrollbar {
     display: none;
 }
 
-.edit-and-delete-creet-btn {
+.edit-and-delete-comment-btn {
     display: flex;
     align-items: center;
     justify-content: space-around;
@@ -95,37 +95,37 @@
     margin-bottom: 15px;
 }
 
-.edit-creet-progress-and-submit-btn {
+.edit-comment-progress-and-submit-btn {
     display: flex;
     align-items: center;
     width: 100%;
 }
 
-.edit-creet-progress {
+.edit-comment-progress {
     display: flex;
     align-items: center;
     justify-content: center;
     margin-left: 15px;
 }
 
-.edit-creet-char-total {
+.edit-comment-char-total {
     font-family: 'Lucida Sans Unicode';
     color: white;
 }
 
-.edit-creet-char-total-red {
+.edit-comment-char-total-red {
     font-family: 'Lucida Sans Unicode';
     color: red;
 }
 
-.edit-creet-char-max {
+.edit-comment-char-max {
     margin-top: 0px;
     margin-bottom: 0px;
     font-family: 'Lucida Sans Unicode';
     color: white;
 }
 
-.submit-edit-creet-btn {
+.submit-edit-comment-btn {
     font-family: 'Lucida Sans Unicode';
     background-color: var(--app-color);
     border: none;
@@ -138,18 +138,18 @@
     cursor: pointer;
 }
 
-.submit-edit-creet-btn:disabled {
+.submit-edit-comment-btn:disabled {
     opacity: 40%;
     cursor: default;
 }
 
-.submit-edit-creet-btn:hover {
+.submit-edit-comment-btn:hover {
     background-color: #5cdeff;
     transition: all;
     transition-duration: 200ms;
 }
 
-.delete-creet-btn {
+.delete-comment-btn {
     font-family: 'Lucida Sans Unicode';
     background-color: red;
     border: none;
@@ -162,14 +162,20 @@
     cursor: pointer;
 }
 
-.delete-creet-btn:hover {
+.delete-comment-btn:hover {
     background-color: rgb(226, 0, 0);
     transition: all;
     transition-duration: 200ms;
 }
 
+.edit-comment-title {
+    font-family: 'Lucida Sans Unicode';
+    display: flex;
+    justify-content: center;
+    align-items: center;
+}
 
-.edit-creet-img-upload {
+.edit-comment-img-upload {
     display: flex;
     align-items: center;
     margin-top: 10px;
@@ -177,7 +183,7 @@
 }
 
 
-.edit-creet-img-upload-container {
+.edit-comment-img-upload-container {
     display: flex;
     justify-content: center;
     align-items: center;
@@ -186,36 +192,36 @@
     border-radius: 20px;
 }
 
-.edit-creet-img-upload-container:hover {
+.edit-comment-img-upload-container:hover {
     background-color: gray;
     transition: all;
     transition-duration: 200ms;
 }
 
-.edit-creet-img-upload-label {
+.edit-comment-img-upload-label {
     display: flex;
     justify-content: center;
     align-items: center;
 }
 
-.edit-creet-img-icon {
+.edit-comment-img-icon {
     color: var(--app-color);
     cursor: pointer;
     width: 20px;
     height: 20px;
 }
 
-.edit-creet-img-input {
+.edit-comment-img-input {
     display: none;
 }
 
-.edit-creet-img-standby {
+.edit-comment-img-standby {
     display: flex;
     align-items: flex-end;
     flex-direction: column;
 }
 
-.edit-creet-remove-img-btn-and-txt {
+.edit-comment-remove-img-btn-and-txt {
     width: 100%;
     display: flex;
     align-items: center;
@@ -223,13 +229,13 @@
     margin-bottom: 5px;
 }
 
-.edit-creet-remove-img-txt {
+.edit-comment-remove-img-txt {
     margin-top: 0px;
     margin-bottom: 0px;
     color: black;
 }
 
-.edit-creet-img-delete-btn {
+.edit-comment-img-delete-btn {
     cursor: pointer;
     height: 20px;
     width: 20px;
@@ -237,20 +243,20 @@
     margin-left: 15px;
 }
 
-.edit-creet-img-delete-btn:hover {
+.edit-comment-img-delete-btn:hover {
     color: rgb(255, 0, 0);
     transition: all;
     transition-duration: 200ms;
 }
 
-.edit-creet-img-name {
+.edit-comment-img-name {
     font-family: 'Lucida Sans Unicode';
     margin-top: 0px;
     margin-bottom: 0px;
     color: black;
 }
 
-.edit-creet-img-container {
+.edit-comment-img-container {
     width: 95%;
     display: flex;
     justify-content: center;
@@ -259,7 +265,7 @@
     margin-bottom: 20px;
 }
 
-.edit-creet-img {
+.edit-comment-img {
     max-width: 250px;
     max-height: 250px;
     border-radius: 10px;
