--- a/react-app/src/components/Sidebar.css
+++ b/react-app/src/components/Sidebar.css
@@ -7,16 +7,22 @@
     padding-right: 20px;
 }
 
-a:visited {
+a {
+    text-decoration:none;
+    color: black;
+}
+
+a:active {
     text-decoration:none;
     color: var(--app-color)
 }
 
-.critter-logo {
+.fas {
     color: var(--app-color);
     font-size: 40px !important;
     margin-bottom: 20px;
-    margin-left: 12px;
+    margin-left: 15px;
+    margin-bottom: 150px;
 }
 
 .sidebar-creet {
