--- a/react-app/src/components/Feed.css
+++ b/react-app/src/components/Feed.css
@@ -1,6 +1,6 @@
 .feed {
   flex: 0.4;
-  border-right: 1px solid var(--twitter-background);
+  border-right: 1px solid var(--app-background);
   min-width: fit-content;
   overflow-y: scroll;
 }
