--- a/react-app/src/components/Sidebar.css
+++ b/react-app/src/components/Sidebar.css
@@ -9,10 +9,10 @@
 
 a {
     text-decoration:none;
-    color: black;
+    color: rgb(0, 0, 0);
 }
 
-a:active {
+#profilenav:active {
     text-decoration:none;
     color: var(--app-color)
 }
