--- a/react-app/src/components/Profile.css
+++ b/react-app/src/components/Profile.css
@@ -1,17 +1,22 @@
+body {
+    --app-color: #50b7f5;
+    --app-background: #e6ecf0;
+}
+
 .profile {
     display: flex;
     height: 100vh;
-    max-width: 1300px;
+    max-width: 1200px;
     margin-left: auto;
     margin-right: auto;
     padding: 0 10px;
 }
 
 .profilecontent {
-    flex: 0.4;
     border-right: 1px solid var(--app-background);
     min-width: fit-content;
     overflow-y: scroll;
+    border-left: 1px solid var(--app-background)
 }
 
 .profilecontent::-webkit-scrollbar {
