--- a/react-app/src/components/Splash.css
+++ b/react-app/src/components/Splash.css
@@ -1,9 +1,14 @@
+#mylogo {
+    display: flex;
+    margin-left: 150px;
+}
+
 .SplashWholePage{
     display: flex;
     flex-direction: column;
     align-items: center;
     font-family: 'Lucida Sans Unicode';
-    height: 100%;
+    height: 100vh;
     width: 100%;
     background-color: #ffffff;
 }
@@ -37,6 +42,10 @@
     padding: 16px;
 }
 
+.SplashIconContainer {
+    height: 50px;
+}
+
 .SplashIcon {
     width: 50px;
     height: 50px;
@@ -53,6 +62,7 @@
     overflow-wrap: break-word;
     margin-bottom: 48px;
     margin-top: 48px;
+    margin-left: 60px;
     color: rgb(0, 0, 0);
 }
 
@@ -61,6 +71,7 @@
     font-family: TwitterChirpExtendedHeavy, Verdana, -apple-system, BlinkMacSystemFont, "Segoe UI", Roboto, Helvetica, Arial, sans-serif;
     font-size: 31px;
     font-weight: 700;
+    margin-left: 80px;
 }
 
 .SplashBorderManipulation {
@@ -71,7 +82,8 @@
 .SplashBorder {
     border-bottom: 1px solid gray;
     height: 18px;
-    width: 135px;
+    width: 100px;
+    padding-left: 55px;
 }
 
 .SplashBorderOr {
@@ -85,25 +97,27 @@
     font-family: 'Lucida Sans Unicode';
     font-size: 14px;
     width: 30px;
+    height: 30px;
     top: 9px;
+    
 }
 
 .SplashAccText {
     color: rgb(0, 0, 0);
     font-weight: 700;
     margin-top: 100px;
+    margin-left: 50px;
     font-size: 17px;
     font-family: TwitterChirpExtendedHeavy, Verdana, -apple-system, BlinkMacSystemFont, "Segoe UI", Roboto, Helvetica, Arial, sans-serif;;
 }
 
 .SplashFooter {
-    height: 67px;
-    background-color: #0c0c0c;
+    background-color: #ffffff;
     display: flex;
     align-items: center;
 }
 .SplashAbout {
-    color: white;
+    color: rgb(0, 0, 0);
     text-decoration: none;
     margin-left: 30px;
     font-weight: bold;
@@ -111,7 +125,7 @@
 
 .SplashAbout:hover {
     text-decoration: underline;
-    color: #1d9bf0;
+    color: var(--app-color)
 }
 
 .SplashLinkedin {
